feat:more on hero section

--- a/Desktop/gomycode/petwebsite/HeroSection.html
+++ b/Desktop/gomycode/petwebsite/HeroSection.html
@@ -21,11 +21,11 @@
     </nav>
     <div class="hero">
         <div class="vocub">
-        <h1>Where pets feel<span> at home</span></h1>
-        <p>from grooming and training to veterinary check-ups,we provide trusted pet care services that keep tailwaging and paws happy</p>
-        <a href="#contact" class="btn">book Appointment</a>
+        <h1>Where pets feel<span class="next-line"> at home</span></h1>
+        <p>From grooming and training to veterinary check-ups,we provide trusted pet care services that keep tailwaging and paws happy</p>
+        <a href="#contact" class="btn">Book Appointment</a>
         </div>
-        <img src="heropet.webp" alt="Dog Image">
+        <img class="img" src="heropet.webp" alt="Dog Image">
     </div>
 </body>
 </html>
