feat:service section added

--- a/Desktop/gomycode/petwebsite/HeroSection.html
+++ b/Desktop/gomycode/petwebsite/HeroSection.html
@@ -21,11 +21,34 @@
     </nav>
     <div class="hero">
         <div class="vocub">
-        <h1>Where pets feel<span class="next-line"> at home</span></h1>
-        <p>From grooming and training to veterinary check-ups,we provide trusted pet care services that keep tailwaging and paws happy</p>
+        <h1>Where pets feel<span class="next-line">home</span></h1>
+        <p>From grooming and training to veterinary check-<span>ups,we provide trusted pet care services that keep tailwaging and paws happy.</span></p>
         <a href="#contact" class="btn">Book Appointment</a>
         </div>
         <img class="img" src="heropet.webp" alt="Dog Image">
+    </div>
+    <div class="services">
+        <div class="service-heading">
+        <h1>Our pet care <span class="unbold">services</span></h1>
+        <h2>From playtime to health check-ups, we provide everything your fury friend needs to live a happy, health life.</h2>
+        </div>
+        <div class="container-items">
+        <div class="service-items">
+            <h2>Pet Boarding & Daycare</h2>
+            <img class="service-img" src="puppy3.jpg" alt=" dogs">
+            <p>Safe and fun spaces for your pets while you're away - care included.</p>
+        </div>
+        <div class="service-items">
+            <h2>Training & Behavior Support</h2>
+            <img class="service-img" src="puppy2.jpg" alt=" dogs">
+            <p>Positive training methods to build good habits for dogs of all ages.</p>
+        </div>
+        <div class="service-items">
+            <h2>Pet Boarding & Daycare</h2>
+            <img class="service-img" src="puppy1.jpg" alt=" dogs">
+            <p>Regular health & preventive care to keep your pets in their best shape.</p>
+        </div>
+        </div>
     </div>
 </body>
 </html>
